--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,50 @@ six==1.10.0
 SQLAlchemy==1.1.13
 urllib3==1.22
 Werkzeug==0.12.2
+aenum==2.0.8
+alembic==0.9.5
+asn1crypto==0.22.0
+bcrypt==3.1.3
+blinker==1.4
+certifi==2017.7.27.1
+cffi==1.10.0
+chardet==3.0.4
+click==6.7
+cryptography==2.0.3
+dnspython==1.15.0
+email-validator==1.0.2
+enum34==1.1.6
+Fabric==1.13.2
+Flask==0.12.2
+Flask-Mail==0.9.1
+Flask-Migrate==2.1.0
+Flask-Moment==0.5.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
+Flask-Validator==1.2.3
+idna==2.5
+ipaddress==1.0.18
+isbnlib==3.6.8
+iso3166==0.8
+itsdangerous==0.24
+Jinja2==2.9.6
+Mako==1.0.7
+MarkupSafe==1.0
+paramiko==2.2.1
+pdb==0.1
+py-moneyed==0.7.0
+pyasn1==0.3.2
+pycparser==2.18
+pymssql==2.1.3
+PyNaCl==1.1.2
+python-dateutil==2.6.1
+python-editor==1.0.3
+python-gnupg==0.4.1
+pytz==2017.2
+PyYAML==3.12
+requests==2.18.3
+six==1.10.0
+SQLAlchemy==1.1.13
+transitions==0.5.3
+urllib3==1.22
+Werkzeug==0.12.2
